--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 </head>
 <body onclick="startMusic()">
   <div id="controls">
-    <label>Number of Points: <input type="range" id="numPointsSlider" min="50" max="400" value="120"><span id="numPointsVal">120</span></label>
-    <label>Rotation X: <input type="range" id="rotXSlider" min="0.001" max="0.01" step="0.001" value="0.002"><span id="rotXVal">0.002</span></label>
-    <label>Rotation Y: <input type="range" id="rotYSlider" min="0.001" max="0.01" step="0.001" value="0.002"><span id="rotYVal">0.002</span></label>
-    <label>Focal Length: <input type="range" id="focalSlider" min="300" max="3000" value="2000"><span id="focalVal">2000</span></label>
-    <button id="musicBtn" onclick="toggleMusic()">Mute Music</button>
+    ><input type="range" id="numPointsSlider" min="50" max="400" value="120"><span id="numPointsVal">120</span>
+    <input type="range" id="rotXSlider" min="0.001" max="0.01" step="0.001" value="0.002"><span id="rotXVal">0.002</span>
+    <input type="range" id="rotYSlider" min="0.001" max="0.01" step="0.001" value="0.002"><span id="rotYVal">0.002</span>
+   <input type="range" id="focalSlider" min="300" max="3000" value="2000"><span id="focalVal">2000</span>
+    <button id="musicBtn" onclick="toggleMusic()">M</button>
   </div>
 
   <!-- Background Music -->
@@ -89,10 +89,10 @@
     function toggleMusic() {
       if (bgMusic.paused) {
         bgMusic.play();
-        musicBtn.textContent = "Mute Music";
+        musicBtn.textContent = "A";
       } else {
         bgMusic.pause();
-        musicBtn.textContent = "Play Music";
+        musicBtn.textContent = "M";
       }
     }
 
