--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         let theta = phi * i;
         let x = Math.cos(theta) * radius;
         let z = Math.sin(theta) * radius;
-        let word = Math.random() > 0.5 ? "ABBY" : "WORLD"; "CANNES";
+        let word = Math.random() > 0.5 ? "ABBY" : "WORLD" : "CANNES";
         pts.push({ x: x * sphereRadius, y: y * sphereRadius, z: z * sphereRadius, word: word });
       }
       return pts;
