--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       left: 10px;
       padding: 5px;
       color: #fff;
-      font-size: 5px;
+      font-size: 8px;
       z-index: 10;
     }
     #controls label {
@@ -49,20 +49,20 @@
       margin-top: 5px;
       background: transparent;
       color: white;
-      border: 1px solid white;
+      border: 1px solid black;
       padding: 4px;
       border-radius: 4px;
       cursor: pointer;
-      font-size: 5px;
+      font-size: 8px;
     }
   </style>
 </head>
 <body onclick="startMusic()">
   <div id="controls">
-    ><input type="range" id="numPointsSlider" min="50" max="400" value="120"><span id="numPointsVal">120</span>
-    <input type="range" id="rotXSlider" min="0.001" max="0.01" step="0.001" value="0.002"><span id="rotXVal">0.002</span>
-    <input type="range" id="rotYSlider" min="0.001" max="0.01" step="0.001" value="0.002"><span id="rotYVal">0.002</span>
-   <input type="range" id="focalSlider" min="300" max="3000" value="2000"><span id="focalVal">2000</span>
+    ><input type="range" id="numPointsSlider" min="50" max="400" value="120"><span id="numPointsVal">L</span>
+    <input type="range" id="rotXSlider" min="0.001" max="0.01" step="0.001" value="0.002"><span id="rotXVal">O</span>
+    <input type="range" id="rotYSlider" min="0.001" max="0.01" step="0.001" value="0.002"><span id="rotYVal">V</span>
+   <input type="range" id="focalSlider" min="300" max="3000" value="2000"><span id="focalVal">E</span>
     <button id="musicBtn" onclick="toggleMusic()">M</button>
   </div>
 
