--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@ function generateFibonacciSphere(n) {
   </script>
 
 <!-- E-postformulär med svart/vit design och palm-emoji -->
-<div style="position: absolute; top: 20px; right: 20px; z-index: 999;">
+<div style="position: absolute; top: 10px; right: 10px; z-index: 999;">
   <form id="signup-form" style="
       background: black;
       padding: 5px;
       border-radius: 8px;
-      border: 1px solid white;
+      border: 1px solid black;
       display: flex;
       gap: 8px;
       align-items: center;
@@ -216,7 +216,7 @@ function generateFibonacciSphere(n) {
     <input 
       type="email" 
       name="email" 
-      placeholder="E-MAIL" 
+      placeholder="SIGN UP" 
       required 
       style="
         padding: 6px 10px;
@@ -235,7 +235,7 @@ function generateFibonacciSphere(n) {
         border: 1px solid black;
         border-radius: 4px;
         cursor: pointer;
-      ">🌴</button>
+      ">&#8594;</button>
   </form>
   <p id="response-message" style="color: white; font-size: 0.9em; margin-top: 6px;"></p>
 </div>
