--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ function generateFibonacciSphere(n) {
         padding: 6px 10px;
         background: black;
         color: white;
-        border: 1px solid white;
+        border: 1px solid black;
         border-radius: 4px;
         cursor: pointer;
         font-size: 16px;
