--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     function toggleMusic() {
       if (bgMusic.paused) {
         bgMusic.play();
-        musicBtn.textContent = "A";
+        musicBtn.textContent = "+";
       } else {
         bgMusic.pause();
-        musicBtn.textContent = "M";
+        musicBtn.textContent = "-";
       }
     }
 
