--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <input type="range" id="rotXSlider" min="0.009" max="0.02" step="0.001" value="0.002"><span id="rotXVal"></span>
     <input type="range" id="rotYSlider" min="0.009" max="0.02" step="0.001" value="0.002"><span id="rotYVal"></span>
    <input type="range" id="focalSlider" min="300" max="3000" value="2000"><span id="focalVal"></span>
-    <button id="musicBtn" onclick="toggleMusic()">M</button>
+    <button id="musicBtn" onclick="toggleMusic()">+</button>
   </div>
 
   <!-- Background Music -->
