--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ABBY.WORLD Cannes 2025</title>
+<link rel="icon" href="favicon.png" type="image/png">
   <style>
     body {
       margin: 0;
