--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
     function toggleMusic() {
       if (bgMusic.paused) {
         bgMusic.play();
-        musicBtn.textContent = "PLAY";
+        musicBtn.textContent = ";MUTE";
       } else {
         bgMusic.pause();
-        musicBtn.textContent = "MUTE";
+        musicBtn.textContent = "PLAY";
       }
     }
 
