--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     function toggleMusic() {
       if (bgMusic.paused) {
         bgMusic.play();
-        musicBtn.textContent = ";MUTE";
+        musicBtn.textContent = "MUTE";
       } else {
         bgMusic.pause();
         musicBtn.textContent = "PLAY";
