--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 </head>
 <body onclick="startMusic()">
   <div id="controls">
-    <input type="range" id="numPointsSlider" min="125" max="500" value="120"><span id="numPointsVal"></span>
-    <input type="range" id="rotXSlider" min="0.009" max="0.02" step="0.001" value="0.002"><span id="rotXVal"></span>
-    <input type="range" id="rotYSlider" min="0.009" max="0.02" step="0.001" value="0.002"><span id="rotYVal"></span>
+    <input type="range" id="numPointsSlider" min="125" max="350" value="120"><span id="numPointsVal"></span>
+    <input type="range" id="rotXSlider" min="0.009" max="0.01" step="0.001" value="0.002"><span id="rotXVal"></span>
+    <input type="range" id="rotYSlider" min="0.009" max="0.01" step="0.001" value="0.002"><span id="rotYVal"></span>
    <input type="range" id="focalSlider" min="300" max="3000" value="2000"><span id="focalVal"></span>
-    <button id="musicBtn" onclick="toggleMusic()">SOUND</button>
+    <button id="musicBtn" onclick="toggleMusic()">CANNES 2025</button>
   </div>
 
   <!-- Background Music -->
@@ -279,7 +279,7 @@ function generateFibonacciSphere(n) {
     e.preventDefault();
     const formData = new FormData(form);
 
-    fetch('https://script.google.com/macros/s/AKfycbwjikUjHXYOIi_5X0y3kDtIgNph8RxLf6bIFcy12ndO8eIzeU2UssNexEpSlCkePjmEbw/exec', {
+    fetch('https://script.google.com/a/macros/abbyworld.com/s/AKfycbxTbggYsHZlLhDAYzqVeanvXohcrE2aPwUJKimcHxXH8xvMSlwDckVmVLnruMREzNSI/exec', {
       method: 'POST',
       body: new URLSearchParams(formData)
     })
