--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ABBY.WORLD Cannes 2025</title>
-<link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png">
   <style>
     body {
       margin: 0;
@@ -15,94 +15,52 @@
     canvas {
       display: block;
     }
-    #controls {
+    #header {
       position: fixed;
       top: 10px;
       left: 10px;
-      padding: 5px;
-      color: #fff;
-      font-size: 8px;
       z-index: 10;
-    }
-    #controls label {
-      display: block;
-      margin-bottom: 4px;
-    }
-    #controls input[type="range"] {
-      -webkit-appearance: none;
-      width: 120px;
-      height: 1px;
-      background: white;
-      border: none;
-      outline: none;
-    }
-    #controls input[type="range"]::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 1px;
-      height: 10px;
-      background: white;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-    #musicBtn {
-      display: block;
-      margin-top: 5px;
-      background: transparent;
       color: white;
-      border: 1px solid black;
-      padding: 4px;
-      border-radius: 4px;
-      cursor: pointer;
       font-size: 10px;
+      font-family: Arial, sans-serif;
     }
   </style>
 </head>
-<body onclick="startMusic()">
-  <div id="controls">
-    <input type="range" id="numPointsSlider" min="125" max="350" value="120"><span id="numPointsVal"></span>
-    <input type="range" id="rotXSlider" min="0.001" max="0.01" step="0.002" value="0.002"><span id="rotXVal"></span>
-    <input type="range" id="rotYSlider" min="0.001" max="0.01" step="0.002" value="0.002"><span id="rotYVal"></span>
-   <input type="range" id="focalSlider" min="300" max="3000" value="2000"><span id="focalVal"></span>
-    <button id="musicBtn" onclick="toggleMusic()">CANNES 2025</button>
-  </div>
+<body>
+  <div id="header">ABBY.WORLD CANNES 2025</div>
 
-  <!-- Background Music -->
-  <audio id="bgMusic" loop>
+  <audio id="bgMusic" autoplay loop>
     <source src="https://raw.githubusercontent.com/ABBY-WORLD/FIATLUX/main/fiatlux.mp3" type="audio/mpeg">
   </audio>
 
   <canvas id="canvas"></canvas>
+
   <script>
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
-    const bgMusic = document.getElementById("bgMusic");
-    const musicBtn = document.getElementById("musicBtn");
-    let musicStarted = false;
 
-    function startMusic() {
-      if (!musicStarted) {
-        bgMusic.play().catch(error => console.log("Audio playback error:", error));
-        musicStarted = true;
-      }
-    }
-
-    function toggleMusic() {
-      if (bgMusic.paused) {
-        bgMusic.play();
-        musicBtn.textContent = "MUTE";
-      } else {
-        bgMusic.pause();
-        musicBtn.textContent = "PLAY";
-      }
-    }
-
-    let numPoints = 120;
-    let rotationSpeedX = 0.002;
-    let rotationSpeedY = 0.002;
-    let focalLength = 2000;
+    let rotationSpeedX = 0.005;
+    let rotationSpeedY = 0.005;
+    let focalLength = 1936;
+    let numPoints = 261;
     let sphereRadius = Math.min(window.innerWidth, window.innerHeight) * 0.4;
     let points = [];
+
+    function generateFibonacciSphere(n) {
+      let pts = [];
+      const phi = Math.PI * (3 - Math.sqrt(5));
+      const words = ["ABBY", "WORLD"];
+      for (let i = 0; i < n; i++) {
+        let y = 1 - (i / (n - 1)) * 2;
+        let radius = Math.sqrt(1 - y * y);
+        let theta = phi * i;
+        let x = Math.cos(theta) * radius;
+        let z = Math.sin(theta) * radius;
+        let word = words[Math.floor(Math.random() * words.length)];
+        pts.push({ x: x * sphereRadius, y: y * sphereRadius, z: z * sphereRadius, word });
+      }
+      return pts;
+    }
 
     function resizeCanvas() {
       canvas.width = window.innerWidth;
@@ -114,39 +72,44 @@
     window.addEventListener("resize", resizeCanvas);
     resizeCanvas();
 
-function generateFibonacciSphere(n) {
-  let pts = [];
-  const phi = Math.PI * (3 - Math.sqrt(5));
-  const words = ["ABBY", "WORLD"]; // 
-
-  for (let i = 0; i < n; i++) {
-    let y = 1 - (i / (n - 1)) * 2;
-    let radius = Math.sqrt(1 - y * y);
-    let theta = phi * i;
-    let x = Math.cos(theta) * radius;
-    let z = Math.sin(theta) * radius;
-    let word = words[Math.floor(Math.random() * words.length)]; // 
-
-    pts.push({ x: x * sphereRadius, y: y * sphereRadius, z: z * sphereRadius, word: word });
-  }
-
-  return pts;
-}
-
     function rotateY(point, angle) {
       const cosA = Math.cos(angle), sinA = Math.sin(angle);
-      return { x: cosA * point.x + sinA * point.z, y: point.y, z: -sinA * point.x + cosA * point.z, word: point.word };
+      return {
+        x: cosA * point.x + sinA * point.z,
+        y: point.y,
+        z: -sinA * point.x + cosA * point.z,
+        word: point.word
+      };
     }
 
     function rotateX(point, angle) {
       const cosA = Math.cos(angle), sinA = Math.sin(angle);
-      return { x: point.x, y: cosA * point.y - sinA * point.z, z: sinA * point.y + cosA * point.z, word: point.word };
+      return {
+        x: point.x,
+        y: cosA * point.y - sinA * point.z,
+        z: sinA * point.y + cosA * point.z,
+        word: point.word
+      };
     }
 
     let angleX = 0, angleY = 0;
+    let mouseX = 0, mouseY = 0;
+
+    document.addEventListener("mousemove", e => {
+      mouseX = e.clientX / window.innerWidth;
+      mouseY = e.clientY / window.innerHeight;
+    });
 
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      rotationSpeedX = 0.001 + (mouseY - 0.5) * 0.02;
+      rotationSpeedY = 0.001 + (mouseX - 0.5) * 0.02;
+
+      if (Math.random() < 0.01) {
+        numPoints = 240 + Math.floor(Math.random() * 50);
+        points = generateFibonacciSphere(numPoints);
+      }
 
       let transformedPoints = points.map(p => rotateX(rotateY(p, angleY), angleX));
       transformedPoints.sort((a, b) => b.z - a.z);
@@ -159,14 +122,7 @@ function generateFibonacciSphere(n) {
         let depthFactor = (p.z + sphereRadius) / (2 * sphereRadius);
         let brightness = depthFactor * 255;
 
-        // **Hi stranger. If you are reading this, you know what you are doing. The answer is yes, it is a vibe-coded (mess) of a website. Created by a Creative Director and not a programmer. The world is up-side-down. It's amazing. **
-        if (p.z < 0) {
-          brightness = Math.max(80, depthFactor * 180); // Increase visibility, but keep subtle
-          ctx.globalAlpha = 0.5; // Makes back letters more transparent
-        } else {
-          ctx.globalAlpha = 1.0; // Front letters are fully visible
-        }
-
+        ctx.globalAlpha = p.z < 0 ? 0.5 : 1.0;
         let fontSize = p.z > 0 ? (8 + 6 * scale) : (6 + 4 * scale);
         ctx.fillStyle = `rgb(${brightness},${brightness},${brightness})`;
         ctx.font = `${fontSize}px Arial`;
@@ -175,149 +131,13 @@ function generateFibonacciSphere(n) {
         ctx.fillText(p.word, x2D, y2D);
       });
 
-      ctx.globalAlpha = 1.0; // Reset alpha to avoid issues
+      ctx.globalAlpha = 1.0;
       angleX += rotationSpeedX;
       angleY += rotationSpeedY;
       requestAnimationFrame(draw);
     }
 
     draw();
-
-    // Slider Event Listeners
-    document.getElementById("numPointsSlider").oninput = function() {
-      numPoints = parseInt(this.value);
-      document.getElementById("numPointsVal").textContent = this.value;
-      points = generateFibonacciSphere(numPoints);
-    };
-    document.getElementById("rotXSlider").oninput = function() {
-      rotationSpeedX = parseFloat(this.value);
-      document.getElementById("rotXVal").textContent = this.value;
-    };
-    document.getElementById("rotYSlider").oninput = function() {
-      rotationSpeedY = parseFloat(this.value);
-      document.getElementById("rotYVal").textContent = this.value;
-    };
-    document.getElementById("focalSlider").oninput = function() {
-      focalLength = parseInt(this.value);
-      document.getElementById("focalVal").textContent = this.value;
-    };
   </script>
-
-<!-- E-postformulär med vit text, pil och fade-out-meddelande via Formspree -->
-<div style="position: absolute; top: 10px; right: 10px; z-index: 999;">
-  <form action="https://formspree.io/f/xldjayre" method="POST" id="signup-form" style="
-      background: black;
-      padding: 5px;
-      border-radius: 8px;
-      border: 1px solid black;
-      display: flex;
-      gap: 8px;
-      align-items: center;
-    ">
-    <input 
-      type="email" 
-      name="email" 
-      placeholder="SIGN UP" 
-      required 
-      style="
-        padding: 6px 10px;
-        border: none;
-        border-bottom: 1px solid transparent;
-        background: black;
-        color: white;
-        border-radius: 0;
-        outline: none;
-        font-size: 10px;
-        transition: border-color 0.2s ease;
-      "
-      onfocus="this.style.borderBottom='1px solid white';"
-      onblur="this.style.borderBottom='1px solid transparent';"
-    >
-    <button 
-      type="submit" 
-      style="
-        padding: 6px 10px;
-        background: black;
-        color: white;
-        border: 1px solid black;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 16px;
-      ">&#8594;</button>
-  </form>
-  <p id="response-message" style="
-    color: white;
-    font-size: 10px;
-    margin-top: 6px;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-  "></p>
-</div>
-
-<style>
-  input::placeholder {
-    color: white;
-    opacity: 1;
-    font-size: 10px;
-  }
-
-  input::-moz-placeholder {
-    color: white;
-    opacity: 1;
-  }
-
-  input:-ms-input-placeholder {
-    color: white;
-  }
-</style>
-
-<script>
-  const form = document.getElementById('signup-form');
-  const responseMsg = document.getElementById('response-message');
-
-  form.addEventListener('submit', function (e) {
-    e.preventDefault();
-    const data = new FormData(form);
-
-    fetch(form.action, {
-      method: 'POST',
-      body: data,
-      headers: {
-        'Accept': 'application/json'
-      }
-    })
-    .then(response => {
-      if (response.ok) {
-        showMessage("THANK YOU");
-        form.reset();
-      } else {
-        response.json().then(data => {
-          if (data.errors) {
-            showMessage(data.errors.map(error => error.message).join(", "));
-          } else {
-            showMessage("ERROR");
-          }
-        });
-      }
-    })
-    .catch(error => {
-      showMessage("ERROR");
-      console.error("Error:", error);
-    });
-  });
-
-  function showMessage(message) {
-    responseMsg.textContent = message;
-    responseMsg.style.opacity = 1;
-    setTimeout(() => {
-      responseMsg.style.opacity = 0;
-    }, 3000);
-  }
-</script>
-</script>
-
-
-
-
 </body>
 </html>
